# CppTrain

./: .gitignore  CMakeLists.txt  README.md  checkRepo  gitPush
.github/: build.sh  copilot-instructions.md
headers/: atm.h  bank_account.h  bank_internal_system.h
src/: CMakeLists.txt  account_test.cpp  atm.cpp  atm.h  atm_data.cpp  bank_account.cpp  bank_account.h  bank_internal_system.cpp  banking_test.cpp  checking_account.h  customer.cpp  customer.h  main.cpp  savings_account.h
src/examples/01_data_types/01_int/: int.cpp  int.h  main.cpp
src/examples/01_data_types/02_decimals/: decimals.cpp  decimals.h  main.cpp
src/examples/01_data_types/03_auto/: main.cpp
src/examples/01_data_types/04_char/: char.cpp  char.h
src/examples/01_data_types/05_string/: main.cpp
src/examples/02_expressions/02_casting/: casting.cpp  casting.h
src/examples/03_conditionals/01_if/: if.cpp  if.h  main.cpp
src/examples/03_conditionals/02_if_else/: if_else.cpp  if_else.h  main.cpp
src/examples/03_conditionals/03_if_else_if/: if_else_if.cpp  if_else_if.h  main.cpp
src/examples/03_conditionals/04_switch/: switch.cpp  switch.h
src/examples/04_repetition/01_while/: main.cpp  while.cpp  while.h
src/examples/04_repetition/02_for/: for.cpp  for.h  main.cpp
src/examples/04_repetition/03_do_while/: do_while.cpp  do_while.h
src/examples/05_functions/02_references/: main.cpp
src/examples/05_functions/03_val_ref_params/: val_ref.cpp  val_ref.h
src/examples/05_functions/04_static/: main.cpp  static.cpp  static.h
src/examples/05_functions/05_default_params/: default.cpp  default.h  main.cpp
src/examples/06_strings/01_create/: main.cpp
src/examples/06_strings/02_functions/: function_str.cpp  function_str.h
src/examples/06_strings/03_for_ranged/: main.cpp
src/examples/07_vector/01_create/: main.cpp
src/examples/07_vector/02_functions/: function_vec.cpp  function_vec.h
src/examples/07_vector/03_for_ranged/: main.cpp
src/examples/08_classes/01_bank/: CMakeLists.txt  bank_account.cpp  bank_account.h  checking_account.h  customer.cpp  customer.h  main.cpp  savings_account.h
src/examples/08_classes/02_shapes/: circle.h  line.h  main.cpp  shape.h
src/examples/09_files/01_text_output/: main.cpp  text_output.cpp  text_output.h
src/examples/10_arrays/01_arrays_mem/: arrays_mem.cpp  arrays_mem.h  main.cpp
src/examples/10_arrays/02_arrays_access/: arrays_access.cpp  arrays_access.h  main.cpp
src/examples/10_arrays/03_arrays_for_range/: arrays_for_range.cpp  arrays_for_range.h
src/examples/11_memory/01_ref_pointers/: main.cpp  ref_pointers.cpp  ref_pointers.h
src/examples/11_memory/02_dynamic_memory/: dynamic_memory.cpp  dynamic_memory.h  main.cpp
src/examples/11_memory/03_memory_leak/: main.cpp  memory_leak.cpp  memory_leak.h
src/examples/11_memory/04_dangling_pointer/: main.cpp
src/examples/11_memory/06_vector/: main.cpp  my_vector.cpp  my_vector.h
test/examples/01_data_types/: 01_data_types_tests.cpp
test/examples/02_expressions/: 02_expressions_tests.cpp
test/examples/03_conditionals/: 03_conditionals_tests.cpp
test/examples/04_repetition/: 04_repetition_tests.cpp
test/examples/05_functions/: 05_functions_tests.cpp
test/examples/06_strings/: 06_strings_tests.cpp
test/examples/07_vector/: 07_vector_tests.cpp
test/examples/08_classes/: 08_classes_tests.cpp  CMakeLists.txt
test/examples/10_arrays/: 10_arrays_tests.cpp
test/examples/11_memory/: 11_memory_tests.cpp
testing/: Atm_test.cpp  BankAccount_test.cpp  BankInternalSystem_test.cpp  account_test.cpp  atm_test.cpp  inheritance_test.cpp  vector_test.cpp
